--- a/fontend/src/assets/monitor/chatbot.css
+++ b/fontend/src/assets/monitor/chatbot.css
@@ -6,7 +6,7 @@
 }
 
 .chatbot-button {
-  background-color: #007bff;
+  background-color: #d76223;
   border: none;
   border-radius: 50%;
   width: 50px;
