update api logout auto

--- a/fontend/src/assets/areaManagement/areaManagement.css
+++ b/fontend/src/assets/areaManagement/areaManagement.css
@@ -10,7 +10,7 @@
 
 .areaManagement_item
   .areaManagement_item_tables
-  .areaManagement_item_tables_table[type="den"] {
+  .areaManagement_item_tables_table[type="lam"] {
   background-color: #303f9f !important;
 }
 
