starting refactor source code - clean code

--- a/fontend/src/assets/color.css
+++ b/fontend/src/assets/color.css
@@ -1,4 +1,10 @@
 /* Form login */
 :root {
   --bg-color-item: rgb(48, 48, 48);
+  --mau-xanh-dam-somot: #031716;
+  --mau-xanh-dam-sohai: #032f30;
+  --mau-xanh-dam-soba: #0a7075;
+  --mau-xanh-dam-sobon: #0c969c;
+  --mau-xanh-dam-sonam: #6ba3be;
+  --mau-xanh-dam-sosau: #274d60;
 }
